# ductedfanlib

./: README.md  pyproject.toml  requirements.txt
src/ductedfanlib/: __init__.py  analysis manager.py  study.py
src/ductedfanlib/analysis/: __init__.py  adt.py  bemt.py  bemt2.py  manager.py
src/ductedfanlib/core/: OperatingConditions.py  __init__.py  blade.py  design.py  duct.py  rotor.py
src/ductedfanlib/geometry/: __init__.py  airfoils.py  curves.py  meshing.py  profiles.py  scratch.py
src/ductedfanlib/utils/: constants.py
tests/: test_bemt.py  test_df.py  test_fixes.py  test_open_rotor.py  test_open_rotor_extended.py  test_profiles.py  test_rotor.py  testt_airfoil.py
validation/: parametric.py  test_ductedfan.py  testttsts_bemt2.py
